Updated bounties and Makefile

--- a/src/makefile.unix
+++ b/src/makefile.unix
@@ -144,6 +144,9 @@ OBJS= \
     obj/zerocoin/SpendMetaData.o \
     obj/zerocoin/ZeroTest.o
 
+install: 
+	cp bgpcoind /usr/sbin
+
 all: bgpcoind
 
 LIBS += $(CURDIR)/leveldb/libleveldb.a $(CURDIR)/leveldb/libmemenv.a
