--- a/src/makefile.unix
+++ b/src/makefile.unix
@@ -148,7 +148,7 @@ OBJS= \
 all: bgpcoind
 
 install: 
-	cp bgpcoind /usr/sbin
+	cp bgpcoind /usr/sbin && strip /usr/sbin/bgpcoind
 
 LIBS += $(CURDIR)/leveldb/libleveldb.a $(CURDIR)/leveldb/libmemenv.a
 DEFS += $(addprefix -I,$(CURDIR)/leveldb/include)
