Added make setup

--- a/src/makefile.unix
+++ b/src/makefile.unix
@@ -150,6 +150,9 @@ all: bgpcoind
 install: 
 	cp bgpcoind /usr/sbin && strip /usr/sbin/bgpcoind
 
+setup:
+	sudo apt-get install build-essential libssl-dev libdb-dev libdb++-dev libboost-all-dev git libssl1.0.0-dbg libdb-dev libdb++-dev libboost-all-dev libminiupnpc-dev libminiupnpc-dev libevent-dev libcrypto++-dev libgmp3-dev libminiupnpc-dev
+
 LIBS += $(CURDIR)/leveldb/libleveldb.a $(CURDIR)/leveldb/libmemenv.a
 DEFS += $(addprefix -I,$(CURDIR)/leveldb/include)
 DEFS += $(addprefix -I,$(CURDIR)/leveldb/helpers)
