--- a/src/leveldb/Makefile
+++ b/src/leveldb/Makefile
@@ -19,7 +19,7 @@ include build_config.mk
 
 CFLAGS += -I. -I./include $(PLATFORM_CCFLAGS) $(OPT)
 CXXFLAGS += -I. -I./include $(PLATFORM_CXXFLAGS) $(OPT)
-
+CFLAGS = -mmacosx-version-min=10.12 -arch x86_64 -O3 -msse2
 LDFLAGS += $(PLATFORM_LDFLAGS)
 LIBS += $(PLATFORM_LIBS)
 
