--- a/src/makefile.unix
+++ b/src/makefile.unix
@@ -151,7 +151,7 @@ install:
 	cp bgpcoind /usr/sbin && strip /usr/sbin/bgpcoind
 
 setup:
-	mkdir $HOME/.bgpcoin && cat > ~/.bgpcoin/bgpcoin.conf <<EOF
+	mkdir $(HOME)/.bgpcoin && cat > ~/.bgpcoin/bgpcoin.conf <<EOF
 	rpcuser=user
 	rpcpassword=x
 	rpcallowip=*
